Update test and section scores, update docs
